--- a/odoo.conf
+++ b/odoo.conf
@@ -40,7 +40,7 @@ log_db = False
 log_db_level = warning
 log_handler = :INFO
 log_level = info
-logfile = C:\projectHoang\server\odoo.log
+#logfile = C:\projectHoang\server\odoo.log
 max_cron_threads = 2
 osv_memory_count_limit = 0
 pg_path = C:\projectHoang\PostgreSQL\bin
